Update1 index.html

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
               Let's connect and explore how my skills can contribute to your projects and initiatives!  </p>
 					<div class="social">
 
-						<a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+						<a href="https://www.facebook.com/nabin.katwal.583"><i class="fa-brands fa-square-facebook"></i></a>
 						<a href="#"><i class="fa-brands fa-twitter"></i></a>
-						<a href="#"><i class="fa-brands fa-instagram"></i></a>
-						<a href="#"><i class="fa-brands fa-linkedin"></i></a>
+						<a href="https://www.instagram.com/n_abin_kc"><i class="fa-brands fa-instagram"></i></a>
+						<a href="https://www.linkedin.com/in/nabinkatuwal"><i class="fa-brands fa-linkedin"></i></a>
 					</div>
 					<button type="button">More About Me</button>
 				</div>	
