--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 						</div>
 						<ul class="nav-list">
-							<li><a href="#">Home</a></li>
+							<li><a href="https://nabinkatuwal.github.io/Portfolio/">Home</a></li>
 							<li><a href="#">About</a></li>
 							<li><a href="#">Services</a></li>
 							<li><a href="#">Works</a></li> 
@@ -62,7 +62,7 @@
 					<button type="button">More About Me</button>
 				</div>	
 				<div class="buttom">
-					<p>© 2023 NabinKC - All Rights Reserved.</p>
+					<p>© 2024 NabinKC - All Rights Reserved.</p>
 					
 				</div>
 			</div>
