--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 						</div>
 						<ul class="nav-list">
 							<li><a href="https://nabinkatuwal.github.io/Portfolio/">Home</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Works</a></li> 
-							<li class="btn"><a href="#">Contact Me</a></li>
+							<li><a href="./homepic.png">About</a></li>
+							<li><a href="./portfoliopic.png">Services</a></li>
+							<li><a href="./skills.png">Works</a></li> 
+							<li class="btn"><a href="./contactpic.png">Contact Me</a></li>
 							
 						</ul>
 					</nav>
