--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li><a href="https://nabinkatuwal.github.io/Portfolio/">Home</a></li>
 							<li><a href="./homepic.png">About</a></li>
 							<li><a href="./portfoliopic.png">Services</a></li>
-							<li><a href="./skills.png">Works</a></li> 
+							<li><a href="./skillspic.png">Works</a></li> 
 							<li class="btn"><a href="./contactpic.png">Contact Me</a></li>
 							
 						</ul>
