--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 	<script >
 		var typed =new Typed(".input",{
-			strings:["Nabin KC.","Web Developer.","Video Editor."],
+			strings:["Nabin KC.","Web Developer.","Graphic Designer."],
 			typeSpeed: 70,
 			backSpeed: 60,
 			loop:true
