--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="hero-text">
 					<h3>Hi, There!</h3>
 					<h1>I Am <span class="input"></span></h1>
-					<p><  I am a passionate Web Developer with experience in creating dynamic ,responsive and user friendly websites. I have worked on a 
+					<p>  I am a passionate Web Developer with experience in creating dynamic ,responsive and user friendly websites. I have worked on a 
               variety of web projects,ranging from personal blogs to e-commerce platforms and many more.....<br>
               Let's connect and explore how my skills can contribute to your projects and initiatives!  </p>
 					<div class="social">
