--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div class="social">
 
 						<a href="https://www.facebook.com/nabin.katwal.583"><i class="fa-brands fa-square-facebook"></i></a>
-						<a href="#"><i class="fa-brands fa-twitter"></i></a>
+						<a href="https://www.youtube.com/@nabinkcyt"><i class="fa-brands fa-youtube"></i></a>
 						<a href="https://www.instagram.com/n_abin_kc"><i class="fa-brands fa-instagram"></i></a>
 						<a href="https://www.linkedin.com/in/nabinkatuwal"><i class="fa-brands fa-linkedin"></i></a>
 					</div>
