--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<a href="https://www.instagram.com/n_abin_kc"><i class="fa-brands fa-instagram"></i></a>
 						<a href="https://www.linkedin.com/in/nabinkatuwal"><i class="fa-brands fa-linkedin"></i></a>
 					</div>
-					<button type="button">More About Me</button>
+					<a href="https://nabinkatuwal.github.io/Portfolio/"<button type="button">More About Me</button></a>
 				</div>	
 				<div class="buttom">
 					<p>© 2024 NabinKC - All Rights Reserved.</p>
