--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 						</div>
 						<ul class="nav-list">
-							<li><a href="https://nabinkatuwal.github.io/Portfolio/">Home</a></li>
-							<li><a href="./homepic.png">About</a></li>
+							<li><a href="./homepic.png">Home</a></li>
+							<li><a href="./skillspic.png">About</a></li>
 							<li><a href="./portfoliopic.png">Services</a></li>
 							<li><a href="./skillspic.png">Works</a></li> 
 							<li class="btn"><a href="./contactpic.png">Contact Me</a></li>
