--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
 </head>
 <body>
-	
+	 <div id="header">
+    <div class="main-width">
+          
+</div>
 	<section class="hero">
 		<div class="main-width">
 			<header>
