--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 
         <!--------------- Start of Contact part ----------------->
-	<div id="contact">
+<!-- 	<div id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="contact-left">
@@ -231,7 +231,7 @@
 		<div class="buttom" >
 			<p style="color: chocolate;">© 2024 NabinKC - All Rights Reserved.</p>
 			</div> 
-	</div>
+	</div> -->
 		<!-- =====================End of Contact Part================== -->
 
 
